Bug 1265641:  Move AEC tail length and delay-agnostic settings to getUserMedia r=padenot a=ritu

MozReview-Commit-ID: 6vHQlmt9lxR