dom/media/webrtc/MediaEngine.h
@@ -219,6 +219,8 @@ public:
     , mNoise(0)
     , mPlayoutDelay(0)
     , mFullDuplex(false)
+    , mExtendedFilter(false)
+    , mDelayAgnostic(false)
   {}
 
   int32_t mWidth;
@@ -234,6 +236,8 @@ public:
   int32_t mNoise;
   int32_t mPlayoutDelay;
   bool mFullDuplex;
+  bool mExtendedFilter;
+  bool mDelayAgnostic;
 
   // mWidth and/or mHeight may be zero (=adaptive default), so use functions.
 
